# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "proc_macro2"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "1.0.51"
  cargo_pkg_authors =
      "David Tolnay <dtolnay@gmail.com>,  Alex Crichton <alex@alexcrichton.com>"
  cargo_pkg_name = "proc-macro2"
  cargo_pkg_description = "A substitute implementation of the compiler's `proc_macro` API to decouple token-based libraries from the procedural macro use case."
  deps = [ "//third_party/rust/crates/unicode-ident:lib" ]
  features = [
    "proc-macro",
    "span-locations",
  ]
  build_root = "build.rs"
  build_sources = [ "build.rs" ]
}
